--- a/11-Cau-truc-lap2/bai-tap/luyentapvonglap1.html
+++ b/11-Cau-truc-lap2/bai-tap/luyentapvonglap1.html
@@ -123,7 +123,7 @@
             }
         }
     </script> -->
-    Bài 8:
+    <!-- Bài 8:
     <button onclick="doanso()">Chơi</button>
     <script>
         function doanso() {
@@ -143,7 +143,7 @@
                     }
                 }
          }
-    </script>
+    </script> -->
 </body>
 
 </html>
